# University-Projects

./: README.md
Semester I/Fundamentals of Programming/Mini Games/CodeRunners/: code_runners.py
Semester II/Data Structures and Algorithms/lab_1/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
Semester II/Data Structures and Algorithms/lab_2/: CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
Semester II/Data Structures and Algorithms/lab_3/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  ShortTest.h
Semester II/Data Structures and Algorithms/lab_4/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  ShortTest.h
Semester II/Data Structures and Algorithms/lab_5/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Semester II/Object Oriented Programming/MedicalDisorders/: MedicalDisorders.cpp  MedicalDisorders.h  disorder.cpp  disorder.h  file.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui_MedicalDisorders.h  utils.cpp  utils.h
Semester II/Object Oriented Programming/Quiz/: Observer.h  Participant.cpp  Participant.h  ParticipantWindow.cpp  ParticipantWindow.h  Question.cpp  Question.h  Quiz.cpp  Quiz.h  Repository.cpp  Repository.h  Service.cpp  Service.h  main.cpp  participants.txt  questions.txt  ui_ParticipantWindow.h  ui_Quiz.h
Semester II/Object Oriented Programming/Screenwriting/: Idea.cpp  Idea.h  IdeasModel.cpp  IdeasModel.h  Repository.h  Screenwriting.cpp  Screenwriting.h  Service.cpp  Service.h  Writer.cpp  Writer.h  WriterWindow.cpp  WriterWindow.h  ideas.txt  main.cpp  ui_Screenwriting.h  ui_WriterWindow.h  writers.txt
Semester II/Object Oriented Programming/TaskManager/: TaskManager.cpp  TaskManager.h  domain.cpp  domain.h  file.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui_TaskManager.h
Semester II/Object Oriented Programming/Weather/: Repository.cpp  Repository.h  Service.cpp  Service.h  Test.cpp  Test.h  Weather.cpp  Weather.h  file.txt  main.cpp  ui_Test.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/: CMakeLists.txt  main.cpp
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/Domain/: coat.cpp  coat.h  operation.cpp  operation.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/DynamicVector/: dynamic_vector.cpp  dynamic_vector.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/GUI/: gui.cpp  gui.h  gui.ui  ui_gui.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/GUI/csv_html_GUI/: csv_html_gui.cpp  csv_html_gui.h  csv_html_gui.ui  ui_csv_html_GUI.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/Service/: service.cpp  service.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/ShoppingList/: CSV_shopping_list.cpp  CSV_shopping_list.h  HTML_shopping_list.cpp  HTML_shopping_list.h  shopping_list.cpp  shopping_list.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/UserInterface/: user_interface.cpp  user_interface.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/exceptions_and_validators/: exceptions.cpp  exceptions.h  validator.cpp  validator.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/files/: coats.txt  shopping_list.csv  shopping_list.html
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/repo/: repository.cpp  repository.h
Semester II/Object Oriented Programming/a11-12-916-Sicoe-Sergiu-main/undo_redo/: undo_redo.cpp  undo_redo.h
Semester III/Advanced Programming Methods/Toy Language/: log1.txt  log10.txt  log11.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt  pom.xml
Semester III/Advanced Programming Methods/Toy Language (with procedures)/: log2.txt  pom.xml
Semester III/Computer Networks/Full_network/: full_network.pkt
Semester IV/Database Management Systems/RecordLabel_WindowsFormsApp/: RecordLabel_WindowsFormsApp.sln
Semester IV/Web Programming/lab_1_html/: cars_web.html
Semester IV/Web Programming/lab_2_CSS/: change_colors.html  flip_box.html
(+93 files in other folders)
